Production/01-02-2025/force-app/main/default/objects/Account/fields/fferpcore__ValidatedBillingState__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ValidatedBillingState__c</fullName>
    <label>Validated Billing State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>