Production/01-02-2025/force-app/main/default/objects/Account/fields/fferpcore__VatRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VatRegistrationNumber__c</fullName>
    <description>Identifying number used for VAT purposes.</description>
    <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
    <label>Tax Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>