Production/01-02-2025/force-app/main/default/objects/Account/fields/Financial_Model__c.field-meta.xml
<CustomField>
    <fullName>Financial_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Model</label>
    <type>Checkbox</type>
</CustomField>