Production/01-02-2025/force-app/main/default/objects/Account/fields/First_Conversation_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Conversation_Held_Date__c</fullName>
    <label>First Conversation Held Date</label>
    <type>Date</type>
</CustomField>