Production/01-02-2025/force-app/main/default/objects/Account/fields/First_Conversation_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Conversation_Schedule_Date__c</fullName>
    <label>First Conversation Schedule Date</label>
    <type>Date</type>
</CustomField>