Production/01-02-2025/force-app/main/default/objects/Account/fields/First_Conversation_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>First_Conversation_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Conversation Scheduled</label>
    <type>Checkbox</type>
</CustomField>