Production/01-02-2025/force-app/main/default/objects/Account/fields/Follow_Up_Conversation_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Conversation_Scheduled_Date__c</fullName>
    <label>Follow-Up Conversation Scheduled Date</label>
    <type>Date</type>
</CustomField>