Production/01-02-2025/force-app/main/default/objects/Account/fields/Frequency_of_data_transfer__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_data_transfer__c</fullName>
    <label>Frequency of data transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>