Production/01-02-2025/force-app/main/default/objects/Account/fields/Full_investment_terms_negotiation_date__c.field-meta.xml
<CustomField>
    <fullName>Full_investment_terms_negotiation_date__c</fullName>
    <label>Full investment terms negotiation date</label>
    <type>Date</type>
</CustomField>