Production/01-02-2025/force-app/main/default/objects/Account/fields/Full_Investment_Terms_Shared__c.field-meta.xml
<CustomField>
    <fullName>Full_Investment_Terms_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Investment Terms Shared</label>
    <type>Checkbox</type>
</CustomField>