Production/01-02-2025/force-app/main/default/objects/Account/fields/Full_investment_terms_under_negotiation__c.field-meta.xml
<CustomField>
    <fullName>Full_investment_terms_under_negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full investment terms under negotiation</label>
    <type>Checkbox</type>
</CustomField>