Production/01-02-2025/force-app/main/default/objects/Account/fields/GDPR_Related_Notes__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Related_Notes__c</fullName>
    <label>GDPR Related Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>