Production/01-02-2025/force-app/main/default/objects/Account/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <label>Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>