Production/01-02-2025/force-app/main/default/objects/Account/fields/Geo_Location_Info__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location_Info__c</fullName>
    <label>Geo Location Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>