Production/01-02-2025/force-app/main/default/objects/Account/fields/Geos__c.field-meta.xml
<CustomField>
    <fullName>Geos__c</fullName>
    <label>Geos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>