Production/01-02-2025/force-app/main/default/objects/Account/fields/Head_of_Terms_under_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Terms_under_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head of Terms under Negotiation</label>
    <type>Checkbox</type>
</CustomField>