Production/01-02-2025/force-app/main/default/objects/Account/fields/How_data_is_currently_monetized__c.field-meta.xml
<CustomField>
    <fullName>How_data_is_currently_monetized__c</fullName>
    <label>How data is currently monetized</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>