Production/01-02-2025/force-app/main/default/objects/Account/fields/How_would_you_describe_the_data_you_have__c.field-meta.xml
<CustomField>
    <fullName>How_would_you_describe_the_data_you_have__c</fullName>
    <label>Describe the data that you have.</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>