Production/01-02-2025/force-app/main/default/objects/Account/fields/Identify_key_countries__c.field-meta.xml
<CustomField>
    <fullName>Identify_key_countries__c</fullName>
    <label>Identify key countries</label>
    <type>TextArea</type>
</CustomField>