Production/01-02-2025/force-app/main/default/objects/Account/fields/Immediate_demand_for_data__c.field-meta.xml
<CustomField>
    <fullName>Immediate_demand_for_data__c</fullName>
    <label>Immediate demand for data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>