Production/01-02-2025/force-app/main/default/objects/Account/fields/Integration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Start_Date__c</fullName>
    <label>Integration Start Date</label>
    <type>Date</type>
</CustomField>