Production/01-02-2025/force-app/main/default/objects/Account/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Ingestion/Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S2S</fullName>
            </value>
            <value>
                <fullName>Online via Pixel</fullName>
            </value>
            <value>
                <fullName>Online via S2S</fullName>
            </value>
            <value>
                <fullName>Online via MAID</fullName>
            </value>
            <value>
                <fullName>Online via SDK</fullName>
            </value>
            <value>
                <fullName>Offline via Geo Location</fullName>
            </value>
            <value>
                <fullName>Offline via Geo Location &amp; Sociodemographics</fullName>
            </value>
            <value>
                <fullName>Online via S2S and Modelling</fullName>
            </value>
            <value>
                <fullName>Offline via 3rd Party Onboarder</fullName>
            </value>
            <value>
                <fullName>Online via HEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>