Production/01-02-2025/force-app/main/default/objects/Account/fields/Interest_in_Future__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Future__c</fullName>
    <label>Interest in future funding rounds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>Strong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>