Production/01-02-2025/force-app/main/default/objects/Account/fields/Investment_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Investment_Organisation__c</fullName>
    <label>Investment Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>