Production/01-02-2025/force-app/main/default/objects/Account/fields/Killed_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Killed_Conversation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Killed Conversation</label>
    <type>Checkbox</type>
</CustomField>