Production/01-02-2025/force-app/main/default/objects/Account/fields/Killed_Conversation_Date__c.field-meta.xml
<CustomField>
    <fullName>Killed_Conversation_Date__c</fullName>
    <label>Killed Conversation Date</label>
    <type>Date</type>
</CustomField>