Production/01-02-2025/force-app/main/default/objects/Account/fields/Legal_Basis_for_Collecting_Data__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis_for_Collecting_Data__c</fullName>
    <label>Legal Basis for Collecting Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Legitimate Interest</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>