Production/01-02-2025/force-app/main/default/objects/Account/fields/Legal_Basis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis_Notes__c</fullName>
    <label>Legal Basis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>