Production/01-02-2025/force-app/main/default/objects/Account/fields/Life_Events_Sources__c.field-meta.xml
<CustomField>
    <fullName>Life_Events_Sources__c</fullName>
    <label>Life Events Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content Engagement</fullName>
            </value>
            <value>
                <fullName>Product Service Searches</fullName>
            </value>
            <value>
                <fullName>Registration information</fullName>
            </value>
            <value>
                <fullName>Survey Information</fullName>
            </value>
            <value>
                <fullName>Purchase Behaviour</fullName>
            </value>
            <value>
                <fullName>Transactional Events</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>