Production/01-02-2025/force-app/main/default/objects/Account/fields/Loyalty_Card_Transaction_Info__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Transaction_Info__c</fullName>
    <label>Loyalty Card Transaction Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>