Production/01-02-2025/force-app/main/default/objects/Account/fields/Marketing_Brief_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief_Completion_Date__c</fullName>
    <label>Marketing Brief Completion Date</label>
    <type>Date</type>
</CustomField>