Production/01-02-2025/force-app/main/default/objects/Account/fields/Match_linkage_partner__c.field-meta.xml
<CustomField>
    <fullName>Match_linkage_partner__c</fullName>
    <label>Match/linkage partner</label>
    <type>TextArea</type>
</CustomField>