Production/01-02-2025/force-app/main/default/objects/Account/fields/Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Materials_Sent__c</fullName>
    <label>Materials Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teaser</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Pitch Deck</fullName>
            </value>
            <value>
                <fullName>FAQs</fullName>
            </value>
            <value>
                <fullName>Financial Model</fullName>
            </value>
            <value>
                <fullName>Data Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>