Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>MB_Company_Description__c</fullName>
    <label>Company Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>