Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Competitors__c.field-meta.xml
<CustomField>
    <fullName>MB_Competitors__c</fullName>
    <label>Competitors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>