Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Data_exclusive_to_Eyeota__c.field-meta.xml
<CustomField>
    <fullName>MB_Data_exclusive_to_Eyeota__c</fullName>
    <label>Data exclusive to Eyeota</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>