Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Deterministic_Modelled__c.field-meta.xml
<CustomField>
    <fullName>MB_Deterministic_Modelled__c</fullName>
    <label>Deterministic/Modelled?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>