Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Logo__c.field-meta.xml
<CustomField>
    <fullName>MB_Logo__c</fullName>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>