Production/01-02-2025/force-app/main/default/objects/Account/fields/MB_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>MB_Marketing_Contact__c</fullName>
    <label>Marketing Contact(s)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>