Production/01-02-2025/force-app/main/default/objects/Account/fields/Monthly_Earnings_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Earnings_Report_URL__c</fullName>
    <description>Monthly Earnings Report Sharing URL for publisher to view and download</description>
    <label>Monthly Earnings Report URL</label>
    <type>TextArea</type>
</CustomField>