Production/01-02-2025/force-app/main/default/objects/Account/fields/Monthly_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Minimum__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Monthly Minimum</label>
    <type>Checkbox</type>
</CustomField>