Production/01-02-2025/force-app/main/default/objects/Account/fields/Monthly_Minimum_USD__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Minimum_USD__c</fullName>
    <label>Monthly Minimum (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>