Production/01-02-2025/force-app/main/default/objects/Account/fields/Monthly_mobile_web_UUs__c.field-meta.xml
<CustomField>
    <fullName>Monthly_mobile_web_UUs__c</fullName>
    <label>Monthly mobile web UUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>