Production/01-02-2025/force-app/main/default/objects/Account/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <label>Net Worth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>