Production/01-02-2025/force-app/main/default/objects/Account/fields/NRE_Reporting__c.field-meta.xml
<CustomField>
    <fullName>NRE_Reporting__c</fullName>
    <label>NRE Reporting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quarters</valueSetName>
    </valueSet>
</CustomField>