Production/01-02-2025/force-app/main/default/objects/Account/fields/Offline_Survey_Info__c.field-meta.xml
<CustomField>
    <fullName>Offline_Survey_Info__c</fullName>
    <label>Offline Survey Info</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>