Production/01-02-2025/force-app/main/default/objects/Account/fields/Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Online_Offline__c</fullName>
    <label>Online/Offline</label>
    <length>25</length>
    <type>Text</type>
</CustomField>