Production/01-02-2025/force-app/main/default/objects/Account/fields/Online_Survey_Info__c.field-meta.xml
<CustomField>
    <fullName>Online_Survey_Info__c</fullName>
    <label>Online Survey Info</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>