Production/01-02-2025/force-app/main/default/objects/Account/fields/Opt_out_procedure_in_place__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_procedure_in_place__c</fullName>
    <label>Opt-out procedure in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>