Production/01-02-2025/force-app/main/default/objects/Account/fields/Owner_Sources__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sources__c</fullName>
    <label>Owner Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Data</fullName>
            </value>
            <value>
                <fullName>Survey Responses</fullName>
            </value>
            <value>
                <fullName>Consumer Purchase Activity</fullName>
            </value>
            <value>
                <fullName>Transactional events</fullName>
            </value>
            <value>
                <fullName>CRM/ Loyalty data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>