Production/01-02-2025/force-app/main/default/objects/Account/fields/PAM_Allocation__c.field-meta.xml
<CustomField>
    <fullName>PAM_Allocation__c</fullName>
    <label>PAM Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aaron</fullName>
            </value>
            <value>
                <fullName>Candice</fullName>
            </value>
            <value>
                <fullName>Hannah</fullName>
            </value>
            <value>
                <fullName>Jordan</fullName>
            </value>
            <value>
                <fullName>Kristina</fullName>
            </value>
            <value>
                <fullName>Laura</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Natassja</fullName>
            </value>
            <value>
                <fullName>Nobu</fullName>
            </value>
            <value>
                <fullName>Peter</fullName>
            </value>
            <value>
                <fullName>Priya</fullName>
            </value>
            <value>
                <fullName>Unallocated</fullName>
            </value>
            <value>
                <fullName>Virginia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>