Production/01-02-2025/force-app/main/default/objects/Account/fields/Partner_Data_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Data_Asset_ID__c</fullName>
    <displayFormat>DA-{YYYY}{MM}-{00}</displayFormat>
    <label>Partner Data Asset ID</label>
    <type>AutoNumber</type>
</CustomField>