Production/01-02-2025/force-app/main/default/objects/Account/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>For Audience Playbook only</inlineHelpText>
    <label>Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>