Production/01-02-2025/force-app/main/default/objects/Account/fields/Past_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Past_Purchase__c</fullName>
    <label>Past Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Different Definition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>