Production/01-02-2025/force-app/main/default/objects/Account/fields/Past_Purchase_Sources__c.field-meta.xml
<CustomField>
    <fullName>Past_Purchase_Sources__c</fullName>
    <label>Past Purchase Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Purchase Activity</fullName>
            </value>
            <value>
                <fullName>Transactional events</fullName>
            </value>
            <value>
                <fullName>Shopping Behaviour</fullName>
            </value>
            <value>
                <fullName>Payment information</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Loyalty data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>