Production/01-02-2025/force-app/main/default/objects/Account/fields/Personal_Income__c.field-meta.xml
<CustomField>
    <fullName>Personal_Income__c</fullName>
    <label>Personal Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>