Production/01-02-2025/force-app/main/default/objects/Account/fields/Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Deck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pitch Deck</label>
    <type>Checkbox</type>
</CustomField>