Production/01-02-2025/force-app/main/default/objects/Account/fields/Pixel_Type__c.field-meta.xml
<CustomField>
    <fullName>Pixel_Type__c</fullName>
    <inlineHelpText>AJS - Javascript
GIF - Image tag</inlineHelpText>
    <label>Pixel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AJS</fullName>
            </value>
            <value>
                <fullName>GIF</fullName>
            </value>
            <value>
                <fullName>iFrame</fullName>
                <label>IFrame</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>