Production/01-02-2025/force-app/main/default/objects/Account/fields/Pixels_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Pixels_Implemented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pixels Implemented</label>
    <type>Checkbox</type>
</CustomField>