Production/01-02-2025/force-app/main/default/objects/Account/fields/Pixels_Implemented_Date__c.field-meta.xml
<CustomField>
    <fullName>Pixels_Implemented_Date__c</fullName>
    <label>Pixels Implemented Date</label>
    <type>Date</type>
</CustomField>