Production/01-02-2025/force-app/main/default/objects/Account/fields/Pixels_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pixels_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pixel Tag Sent</label>
    <type>Checkbox</type>
</CustomField>