Production/01-02-2025/force-app/main/default/objects/Account/fields/Platform_Only_For_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Platform_Only_For_Tableau__c</fullName>
    <formula>IF(RecordTypeId=&apos;01290000000iUrt&apos;,Name,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Only (For Tableau)</label>
    <type>Text</type>
</CustomField>